2021/11/encrypt-service-traffic-with-openshift-ca/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: webapp-tls
  labels:
    app: webapp
  name: webapp
spec:
  selector:
    app: webapp
  ports:
  - port: 8443
    targetPort: https
    name: https
