2021/11/encrypt-service-traffic-with-openshift-ca/deploy/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: webapp
  labels:
    app: webapp
spec:
  to:
    kind: Service
    name: webapp
    weight: 100
  port:
    targetPort: https
  tls:
    termination: reencrypt
  wildcardPolicy: None
